--- a/webclient/src/translations/translate.json
+++ b/webclient/src/translations/translate.json
@@ -4,7 +4,7 @@
         "servicesLink": "ПОСЛУГИ",
         "aboutLink": "ПРО НАС",
         "contactsLink": "КОНТАКТИ",
-        "presentationText": "Розробка веб додатків",
+        "presentationText": "Розробка програмного забеспечення",
         "servicesTitle": "ПОСЛУГИ",
         "aboutTitle":"ПРО НАС",
         "about1":"",
@@ -39,7 +39,7 @@
         "servicesLink": "SERVICES",
         "aboutLink": "ABOUT",
         "contactsLink": "CONTACTS",
-        "presentationText": "Farming Eden2012",
+        "presentationText": "Software development",
         "servicesTitle": "SERVICES",
         "aboutTitle":"ABOUT",
         "about1":"",
