--- a/webclient/src/translations/translate.json
+++ b/webclient/src/translations/translate.json
@@ -6,6 +6,18 @@
         "contactsLink": "КОНТАКТИ",
         "presentationText": "Розробка програмного забеспечення",
         "servicesTitle": "ПОСЛУГИ",
+        "frontEndServiceTitle": "Розробка інтерфейсу користувача",
+        "frontEndServiceInfo1": "Ви хочете мати сучасний, якісний та зручний інтерфейс? Для frontend розробки ми використовуємо сучасні та популярні фреймворки, такі як Angular та ReactJs.",
+        "frontEndServiceInfo2": "Вам потрібен веб-сайт, а часу для розробки не багато? Модульна розробка інтерфейсу користувача за допомогою бібліотеки Angular material, допоможе реалізувати продукт в швидкі терміни.",
+        "frontEndServiceInfo3": "Якщо ви хочете мати невеликий сайт-візитку, перечислених технологій буде достатньо, щоб задовольнити ваші потреби",
+        "backEndServiceTitle": "Розробка серверної частини",
+        "backEndServiceInfo1": "Якщо Вам потрібен великий сайт із бізнес логікою, наприклад інтернет магазин. Для back end розробки ми використовуємо сучасний фреймворк ASP.NET WEB API або ASP.NET MVC",
+        "backEndServiceInfo2": "Бізнес логіка, дає можливість додавати нові дані, видаляти та оновлювати їх, що дасть Вашому веб додатоку більше можливостей.",
+        "backEndServiceInfo3": "Якщо Вам потрібно реєструвати нових користувачів, та працювати з авторизованими людьми, то без серверної частини тут не обійтись.",
+        "databaseServiceTitle": "Розробка баз данних",
+        "databaseServiceInfo1": "Вам потрібно зберігати дані, які використовуються бізнес логікою вашого веб додатку? Для цього ми можемо розробити базу даних за допомогою технологій MSSQL Server або PostgreSQL",
+        "databaseServiceInfo2": "Зазвичай бізнес логіка великих веб додатків використовуює базу даних для обробки інформації. Тому Вам слід звернути увагу на цю послугу.",
+        "databaseServiceInfo3": "",
         "aboutTitle":"ПРО НАС",
         "about1":"",
         "about2":"",
@@ -41,6 +53,18 @@
         "contactsLink": "CONTACTS",
         "presentationText": "Software development",
         "servicesTitle": "SERVICES",
+        "frontEndServiceTitle": "User interface development",
+        "frontEndServiceInfo1": "Do you want to have a modern, high-quality and convenient interface? We use modern and popular frameworks such as Angular and ReactJs for frontend development.",
+        "frontEndServiceInfo2": "Do you need a website and don't have a lot of time to develop it? Modular development of the user interface using the Angular material library will help to implement the product quickly.",
+        "frontEndServiceInfo3": "If you want to have a small business card site, the listed technologies will be enough to meet your needs.",
+        "backEndServiceTitle": "Backend Development",
+        "backEndServiceInfo1": "If you need a large site with business logic, for example an online store. We use the modern ASP.NET WEB API or ASP.NET MVC framework for back end development",
+        "backEndServiceInfo2": "Business logic, allows you to add new data, delete and update it, which will give more possibilities for your web application.",
+        "backEndServiceInfo3": "If you need to register new users and work with authorized people, then the server part is indispensable.",       
+        "databaseServiceTitle": "Database development",
+        "databaseServiceInfo1": "Do you need to store data used by the logic of your web application? For this we can develop a database using MSSQL Server or PostgreSQL technologies",
+        "databaseServiceInfo2": "Typically, the business logic of a large web application uses a database to process information. Therefore, you should pay attention to this service.",
+        "databaseServiceInfo3": "",
         "aboutTitle":"ABOUT",
         "about1":"",
         "about2":"",
