--- a/webclient/src/translations/translate.json
+++ b/webclient/src/translations/translate.json
@@ -7,11 +7,11 @@
         "presentationText": "Розробка програмного забеспечення",
         "servicesTitle": "ПОСЛУГИ",
         "frontEndServiceTitle": "Розробка інтерфейсу користувача",
-        "frontEndServiceInfo1": "Ви хочете мати сучасний, якісний та зручний інтерфейс? Для frontend розробки ми використовуємо сучасні та популярні фреймворки, такі як Angular та ReactJs.",
+        "frontEndServiceInfo1": "Ви хочете мати сучасний, якісний та зручний інтерфейс? Для frontend розробки ми використовуємо сучасні фреймворки, такі як Angular та ReactJs.",
         "frontEndServiceInfo2": "Вам потрібен веб-сайт, а часу для розробки не багато? Модульна розробка інтерфейсу користувача за допомогою бібліотеки Angular material, допоможе реалізувати продукт в швидкі терміни.",
         "frontEndServiceInfo3": "Якщо ви хочете мати невеликий сайт-візитку, перечислених технологій буде достатньо, щоб задовольнити ваші потреби",
         "backEndServiceTitle": "Розробка серверної частини",
-        "backEndServiceInfo1": "Якщо Вам потрібен великий сайт із бізнес логікою, наприклад інтернет магазин. Для back end розробки ми використовуємо сучасний фреймворк ASP.NET WEB API або ASP.NET MVC",
+        "backEndServiceInfo1": "Якщо Вам потрібен великий сайт із бізнес логікою, наприклад інтернет магазин. Для backend розробки ми використовуємо сучасний фреймворк ASP.NET WEB API або ASP.NET MVC",
         "backEndServiceInfo2": "Бізнес логіка, дає можливість додавати нові дані, видаляти та оновлювати їх, що дасть Вашому веб додатоку більше можливостей.",
         "backEndServiceInfo3": "Якщо Вам потрібно реєструвати нових користувачів, та працювати з авторизованими людьми, то без серверної частини тут не обійтись.",
         "databaseServiceTitle": "Розробка баз данних",
@@ -54,11 +54,11 @@
         "presentationText": "Software development",
         "servicesTitle": "SERVICES",
         "frontEndServiceTitle": "User interface development",
-        "frontEndServiceInfo1": "Do you want to have a modern, high-quality and convenient interface? We use modern and popular frameworks such as Angular and ReactJs for frontend development.",
+        "frontEndServiceInfo1": "Do you want to have a modern, high-quality and convenient interface? We use modern frameworks such as Angular and ReactJs for frontend development.",
         "frontEndServiceInfo2": "Do you need a website and don't have a lot of time to develop it? Modular development of the user interface using the Angular material library will help to implement the product quickly.",
         "frontEndServiceInfo3": "If you want to have a small business card site, the listed technologies will be enough to meet your needs.",
         "backEndServiceTitle": "Backend Development",
-        "backEndServiceInfo1": "If you need a large site with business logic, for example an online store. We use the modern ASP.NET WEB API or ASP.NET MVC framework for back end development",
+        "backEndServiceInfo1": "If you need a large site with business logic, for example an online store. We use the modern ASP.NET WEB API or ASP.NET MVC framework for backend development",
         "backEndServiceInfo2": "Business logic, allows you to add new data, delete and update it, which will give more possibilities for your web application.",
         "backEndServiceInfo3": "If you need to register new users and work with authorized people, then the server part is indispensable.",       
         "databaseServiceTitle": "Database development",
