--- a/webclient/src/translations/translate.json
+++ b/webclient/src/translations/translate.json
@@ -19,10 +19,10 @@
         "databaseServiceInfo2": "Зазвичай бізнес логіка великих веб додатків використовуює базу даних для обробки інформації. Тому Вам слід звернути увагу на цю послугу.",
         "databaseServiceInfo3": "",
         "aboutTitle":"ПРО НАС",
-        "about1":"",
-        "about2":"",
-        "about3":"",
-        "about4":"",
+        "about1":"Підприємство було зареєстроване в 2020 році по спеціальності 'Комп'ютерне програмування'. Від початку свого існування ми займалися розробкою програмного забезпечення під замовлення.",
+        "about2":"Основною спеціалізацією компанії є розробка веб додатків від найпростіших до найскладніших за масштабом та бізнес логікою. Одним із перших таких проектів була розробка серверної частити для веб сайту для дерматології, з використанням технологій ASP.NET Core 3 WEB API, Dapper та MSSQL Server. Мікросервісна архітектура допомогла зробити цей проект модульним та простим для модифікацій у майбутньому.",
+        "about3":"Другий проект був для американської компанії, яка замалася зберіганням та доставками їжі. Дуже великий проект, де була робота не тільки на серверній частині, а й на стороні клієнта (браузер). Використовувались технології ASP.NET MVC 5, ASP.NET WEB API, Angular 5, Angular Material, Dapper та архітектура onion. Крім того, для підтримки автотестів ми використовували фреймворки Selenium і Atata.",
+        "about4":"Темою наступного проекту була логістика для одягу від складів до магазинів. Це компанія, яка працює із сучасними брендами та допомагає підвищити ефективність продажу товарів. Дуже цікавий проект із сучасними технологіями, версії яких постійно оновлювалися. Для розробки використовувались Angular, Angular Material, ASP.NET WEB API Core, ADO.NET, MSSQL Server, Entity Framework, SignalR та Azure Services.",
         "contactsTitle":"КОНТАКТИ",
         "addressTitle":"НАША ЮРИДИЧНА АДРЕСА",
         "addressContent":"",
@@ -66,10 +66,10 @@
         "databaseServiceInfo2": "Typically, the business logic of a large web application uses a database to process information. Therefore, you should pay attention to this service.",
         "databaseServiceInfo3": "",
         "aboutTitle":"ABOUT",
-        "about1":"",
-        "about2":"",
-        "about3":"",
-        "about4":"",
+        "about1":"The company was registered in the specialty 'Computer programming' in 2020 year. We have been engaged in custom software development since the beginning of our existence.",
+        "about2":"The development of web applications from the simplest to the most complex in scale and business logic is the main specialization of the company. The development of the server part for a website for dermatology was one of the first such projects, using ASP.NET Core 3 WEB API technologies, Dapper and MSSQL Server. The microservices architecture helped make this project modular and easy to modify in the future.",
+        "about3":"The second project was for an American company that was involved in food storage and delivery. A very large project, where work was not only on the server side, but also on the client side (browser). We used ASP.NET MVC 5, ASP .NET WEB API, Angular 5, Angular Material, Dapper and onion architecture. Besides, we used Selenium and Atata frameworks to support autotests.",
+        "about4":"The topic of the next project was logistics for clothes from warehouses to stores. This is a company that works with modern brands and helps to increase the efficiency of the sale of goods. A very interesting project with modern technologies, the versions of which were constantly updated. We used for development Angular, Angular Material, ASP.NET WEB API Core, ADO.NET, MSSQL Server, Entity Framework, SignalR and Azure Services.",
         "contactsTitle":"CONTACTS",
         "addressTitle":"OUR LEGAL ADDRESS",
         "addressContent":"",
