adds contacts data

--- a/webclient/src/translations/translate.json
+++ b/webclient/src/translations/translate.json
@@ -25,11 +25,9 @@
         "about4":"Темою наступного проекту була логістика для одягу від складів до магазинів. Цей веб додаток допомагає підвищити ефективність продажу товарів. Дуже цікавий проект із сучасними технологіями, версії яких постійно оновлювалися. Для розробки використовувались Angular, Angular Material, ASP.NET WEB API Core, ADO.NET, MSSQL Server, Entity Framework, SignalR та Azure Services.",
         "aboutCEO":"Головою компанії є Парасочка Микола Геннадійович. У 2016 році почав навчатись в Харківському політехнічному інституті за спеціальністю 'Комп'ютерна інженерія'. Отримав диплом бакалавра в 2020 році, а 23 грудня 2021 року отримав диплом магістра. Працює у сфері комп'ютерного програмування з 2019 року як .Net розробник повного стека.",
         "contactsTitle":"КОНТАКТИ",
-        "addressTitle":"НАША ЮРИДИЧНА АДРЕСА",
-        "addressContent":"",
-        "CEO":"",
-        "CEOName": "",
-        "CEOMobilePhoneNumber":"",
+        "CEO":"Директор: ",
+        "CEOName": "Парасочка Микола Геннадійович",
+        "CEOMobilePhoneNumber":"Моб. телефон: +380991191389",
         "firstName": "Ім'я",
         "lastName": "Прізвище",
         "email": "email",
@@ -71,12 +69,11 @@
         "about2":"The development of web applications from the simplest to the most complex in scale and business logic is the main specialization of the company. The development of the server part for a website for dermatology was one of the first such projects, using ASP.NET Core 3 WEB API technologies, Dapper and MSSQL Server. The microservices architecture helped make this project modular and easy to modify in the future.",
         "about3":"The second project was for an American company that was involved in food storage and delivery. A very large project, where work was not only on the server side, but also on the client side (browser). We used ASP.NET MVC 5, ASP .NET WEB API, Angular 5, Angular Material, Dapper and onion architecture. Besides, we used Selenium and Atata frameworks to support autotests.",
         "about4":"The topic of the next project was logistics for clothes from warehouses to stores. This web application helps to increase the efficiency of the sale of goods. A very interesting project with modern technologies, the versions of which were constantly updated. We used for development Angular, Angular Material, ASP.NET WEB API Core, ADO.NET, MSSQL Server, Entity Framework, SignalR and Azure Services.",
+        "aboutCEO":"Parasochka Mykola Gennadiyovych is the head of the company. He began studying at the Kharkiv Polytechnic Institute majoring in Computer Engineering in 2016. Received a bachelor's degree in 2020, and received a master's degree on December 23, 2021. He has been working in the field of computer programming since 2019 as a .Net full-stack developer.",
         "contactsTitle":"CONTACTS",
-        "addressTitle":"OUR LEGAL ADDRESS",
-        "addressContent":"",
-        "CEO":"",
-        "CEOName": "",
-        "CEOMobilePhoneNumber":"",
+        "CEO":"Director: ",
+        "CEOName": "Parasochka Mykola Gennadiyovych",
+        "CEOMobilePhoneNumber":"Mobile phone: +380991191389",
         "firstName": "Name",
         "lastName": "Last name",
         "email": "Email",
