--- a/src/translations/translate.json
+++ b/src/translations/translate.json
@@ -1,9 +1,11 @@
 {
     "ua": {
+        "link": "посилання",
         "homeLink": "ГОЛОВНА",
         "servicesLink": "ПОСЛУГИ",
         "aboutLink": "ПРО НАС",
         "contactsLink": "КОНТАКТИ",
+        "projectsLink": "ПРОЕКТИ",
         "presentationText": "Розробка програмного забеспечення",
         "servicesTitle": "ПОСЛУГИ",
         "frontEndServiceTitle": "Розробка інтерфейсу користувача",
@@ -30,7 +32,7 @@
         "CEOMobilePhoneNumber":"Моб. телефон: +380991191389",
         "firstName": "Ім'я",
         "lastName": "Прізвище",
-        "email": "email",
+        "email": "Email",
         "phoneNumber":"Моб. телефон",
         "messageTitle": "Повідомлення",
         "sendLabel": "Відправити",
@@ -43,13 +45,18 @@
         "wrongPhoneNumberError": "Введіть дійсний номер телефону.",
         "phoneLengthError": "Довжина значення становить 12 цифр.",
         "emailSentSuccess": "Повідомлення надіслано",
-        "emailSentError": "Помилка на сервері. Будь ласка спробуйте пізніше"
+        "emailSentError": "Помилка на сервері. Будь ласка спробуйте пізніше",
+        "eden2012WebsiteBusinessCard": "Eden 2012 (сайт-візитка)",
+        "eden2012WebsiteBusinessCardDescription": "Звичайний сайт-візитка для фермерського господарства Eden 2012 із описом бізнесу та контактною інформацією. Можете перейти на веб сайт",
+        "eden2012Management": "Eden 2012 - менеджмент",
+        "eden2012ManagementDescription": "Система менеджменту полями для фермерського господарства, яка дає змогу зберігати історію обробки землі. Керування доступом користувачів, перегляд статистики прибутку та урожаю, можливість відтворити сезон та завантажити звіт у форматі pdf."
     },
     "en": {
         "homeLink": "HOME",
         "servicesLink": "SERVICES",
         "aboutLink": "ABOUT",
         "contactsLink": "CONTACTS",
+        "projectsLink": "PROJECTS",
         "presentationText": "Software development",
         "servicesTitle": "SERVICES",
         "frontEndServiceTitle": "User interface development",
@@ -89,6 +96,11 @@
         "wrongPhoneNumberError": "Enter a valid phone number.",
         "phoneLengthError": "The length of the value is 12 digits.",
         "emailSentSuccess": "Message was sent",
-        "emailSentError": "There is server error. Please try later."
+        "emailSentError": "There is server error. Please try later.",
+        "eden2012WebsiteBusinessCard": "Eden 2012 (business card website)",
+        "link": "link",
+        "eden2012WebsiteBusinessCardDescription": "The original business card website for the farming business of Eden 2012 with a description and contact information. You can go to the website",
+        "eden2012Management": "Eden 2012 - management",
+        "eden2012ManagementDescription": "A field management system for the farming kingdom, which allows you to find out the history of land cultivation. Access to sources, viewing profit and harvest statistics, the ability to open the season and download in pdf format."
     }
 }
