--- a/src/translations/translate.json
+++ b/src/translations/translate.json
@@ -51,7 +51,9 @@
         "eden2012Management": "Eden 2012 - менеджмент",
         "eden2012ManagementDescription": "Система менеджменту полями для фермерського господарства, яка дає змогу зберігати історію обробки землі. Керування доступом користувачів, перегляд статистики прибутку та урожаю, можливість відтворити сезон та завантажити звіт у форматі pdf.",
         "justMusic": "Just music",
-        "justMusicDescription": "Простий і безкоштовний аудіоплеєр без реклами для прослуховування музики з мобільного пристрою. Якщо ви не хочете слухати деякі аудіофайли, наприклад файли диктофона, вам слід скористатися функцією ігнорування. Ви можете відкрити сторінку налаштувань, щоб вибрати тему, мову та швидкість відтворення."
+        "justMusicDescription": "Простий та безкоштовний аудіоплеєр без реклами для прослуховування музики з мобільного пристрою. Якщо ви не хочете слухати деякі аудіофайли, наприклад файли диктофона, вам слід скористатися функцією ігнорування. Ви можете відкрити сторінку налаштувань, щоб вибрати тему, мову та швидкість відтворення.",
+        "mobileServiceTitle": "Розробка мобільних застосунків",
+        "mobileServiceDescription": "Вам потрібен мобільний застосунок? Для розробки програм під смартфони ми використовуємо React Native технологію та бібліотеку React Native Paper. Ці інструменти дають можливість реалізовувати мобільні застосунки із сучасним дизайном та швидким функціоналом."
     },
     "en": {
         "homeLink": "HOME",
@@ -105,6 +107,8 @@
         "eden2012Management": "Eden 2012 - management",
         "eden2012ManagementDescription": "A field management system for the farming kingdom, which allows you to find out the history of land cultivation. Access to sources, viewing profit and harvest statistics, the ability to open the season and download in pdf format.",
         "justMusic": "Just music",
-        "justMusicDescription": "Simple and free ad-free audio player for listening to music from your mobile device. If you don't want to listen to some audio files, such as voice recorder files, you should use the ignore function. You can open the settings page to select the theme, language and playback speed."
+        "justMusicDescription": "Simple and free ad-free audio player for listening to music from your mobile device. If you don't want to listen to some audio files, such as voice recorder files, you should use the ignore function. You can open the settings page to select the theme, language and playback speed.",
+        "mobileServiceTitle": "Mobile applications development",
+        "mobileServiceDescription": "Do you need a mobile app? We use React Native technology and the React Native Paper library to develop apps for smartphones. These tools make it possible to implement mobile applications with modern design and fast functionality."
     }
 }
