adds some changes

--- a/src/translations/translate.json
+++ b/src/translations/translate.json
@@ -6,7 +6,7 @@
         "aboutLink": "ПРО НАС",
         "contactsLink": "КОНТАКТИ",
         "projectsLink": "ПРОЕКТИ",
-        "presentationText": "Розробка програмного забеспечення",
+        "presentationText": "Розробка програмного забезпечення",
         "servicesTitle": "ПОСЛУГИ",
         "frontEndServiceTitle": "Розробка інтерфейсу користувача",
         "frontEndServiceInfo1": "Ви хочете мати сучасний, якісний та зручний інтерфейс? Для frontend розробки ми використовуємо сучасні фреймворки, такі як Angular та ReactJs.",
