--- a/src/translations/translate.json
+++ b/src/translations/translate.json
@@ -47,7 +47,7 @@
         "emailSentSuccess": "Повідомлення надіслано",
         "emailSentError": "Помилка на сервері. Будь ласка спробуйте пізніше",
         "eden2012WebsiteBusinessCard": "Eden 2012 (сайт-візитка)",
-        "eden2012WebsiteBusinessCardDescription": "Звичайний сайт-візитка для фермерського господарства Eden 2012 із описом бізнесу та контактною інформацією. Можете перейти на веб сайт",
+        "eden2012WebsiteBusinessCardDescription": "Звичайний сайт-візитка для фермерського господарства Eden 2012 із описом бізнесу та контактною інформацією.",
         "eden2012Management": "Eden 2012 - менеджмент",
         "eden2012ManagementDescription": "Система менеджменту полями для фермерського господарства, яка дає змогу зберігати історію обробки землі. Керування доступом користувачів, перегляд статистики прибутку та урожаю, можливість відтворити сезон та завантажити звіт у форматі pdf.",
         "justMusic": "Just music",
@@ -103,7 +103,7 @@
         "emailSentError": "There is server error. Please try later.",
         "eden2012WebsiteBusinessCard": "Eden 2012 (business card website)",
         "link": "link",
-        "eden2012WebsiteBusinessCardDescription": "The original business card website for the farming business of Eden 2012 with a description and contact information. You can go to the website",
+        "eden2012WebsiteBusinessCardDescription": "The original business card website for the farming business of Eden 2012 with a description and contact information.",
         "eden2012Management": "Eden 2012 - management",
         "eden2012ManagementDescription": "A field management system for the farming kingdom, which allows you to find out the history of land cultivation. Access to sources, viewing profit and harvest statistics, the ability to open the season and download in pdf format.",
         "justMusic": "Just music",
